--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,12 +9,15 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main" ] # Change this to the branch to default branch
-    branches-ignore: ["ignore/branch", "test/*"] # Ignore CodeQL scan for these branches
+    branches: 
+      - "main"  # Change this to the branch to default branch
+      - "!ignore/branch" # Ignore CodeQL scan for these branches
+      - "!test/*" # Ignore CodeQL scan for these branches
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ] # Change this to the branch to default branch
-    branches-ignore: ["ignore/branch", "test/*"] # Ignore CodeQL scan for these branches
+      - "main"  # Change this to the branch to default branch
+      - "!ignore/branch" # Ignore CodeQL scan for these branches
+      - "!test/*" # Ignore CodeQL scan for these branches
   schedule:
     - cron: '44 23 * * 5' # Run CodeQL scan every Friday at 11:44 PM UTC
     
@@ -43,7 +46,7 @@ jobs:
     # Setup the go envrionment and caching
     - uses: actions/setup-go@v3
       with:
-        go-version-file: 'go.mod' # The go.mod file with the required Go version
+        go-version-file: 'path/to/go.mod' # The go.mod file with the required Go version
         cache: true
         cache-dependancy-path: 'go.sum' # The path to go.sum file to find dependancies to cache
 
