--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -2,15 +2,16 @@ name: "CodeQL"
 
 on:
   push:
+    branches:
       - "main"  # Change this to the branch to default branch
       - "!ignore/branch" # Ignore CodeQL scan for these branches
       - "!test/*" # Ignore CodeQL scan for these branches
-  pull_request:
-    # The branches below must be a subset of the branches above
-      - "main"  # Change this to the branch to default branch
-  paths-ignore:
+    paths-ignore:
       - '**/*.md'
       - '**/*.txt'
+  pull_request:
+    branches:
+      - "main"  # Change this to the branch to default branch
   schedule:
     - cron: '44 23 * * 5' # Run CodeQL scan every Friday at 11:44 PM UTC
     
