--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -37,7 +37,7 @@ jobs:
 
     - uses: actions/setup-go@v3
       with:
-        go-version-file: 'go.mod' # The go.mod file with the required Go version
+        go-version-file: './go.mod' # The go.mod file with the required Go version
         cache: true
         #cache-dependancy-path: 'go.sum' # The path to go.sum file to find dependancies to cache
 
